enum RoomStatus {
  Free,
  Reserved,
  CheckedIn,
  CheckedOut
}

export default RoomStatus;
