enum RoomType {
  Standard,
  Deluxe,
  FamilySuite,
  BusinessSuite,
}

export default RoomType;
